packages/typ/tests/fixtures/diagnostics/0137_adt_constructor_int_arg_mismatch_02.ml.infer.expected
File "0137_adt_constructor_int_arg_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0137_adt_constructor_int_arg_mismatch_02 is not a valid module name.

File "0137_adt_constructor_int_arg_mismatch_02.ml", line 2, characters 12-16:
2 | let _ = Num true
                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
